aws/cloudformation-security-group.json
{
    "Description": "Detached Box Security Group",
    "Resources": {
        "InstanceSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Enable SSH access via port 22 and Mosh connections",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": "60000",
                        "ToPort": "61000",
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "Tags": [
                    "detached"
                ]
            }
        }
    }
}
